<resources>

    <string name="app_name">Garnier</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_01">Каждому возрасту – свой уход! Пожалуйста, выберите один из 4-х вариантов возрастов</string>
    <string name="background">background</string>
    <string name="logo">logo</string>
    <string name="s25">25+</string>
    <string name="s35">35+</string>
    <string name="s45">45+</string>
    <string name="s55">55+</string>
    <string name="bold_02">Каждому возрасту – свой уход</string>
    <string name="text_02_a">Причины и уровень возрастных изменения отличаются в каждом возрасте. Для эффективного ухода в каждом возрасте необходима своя формула, решающая именно те изменения, которые свойственны коже именно сейчас. Новая линия Гарньер Уход c Растительными Клетками Молодости - это 4 комплексные программы с индивидуально подобранными ингредиентами для каждого возраста.</string>
    <string name="text_02_b">Первые возрастные изменения кожи начинают проявляться уже в 25 лет. Для сохранения молодости и сияния кожи в этом возрасте одного увлажнения не достаточно!</string>
    <string name="btn_02">Запусти процесс обновления кожи</string>
    <string name="text_03_b">После 35 лет процесс регенерации кожи замедляется. Она хуже противостоит возрастным изменениям. Коже нужна активная помощь в борьбе с первыми морщинами.</string>
    <string name="text_04_b">К 45-ти годам кожа теряет упругость, морщины становятся заметнее, их количество увеличивается, контуры лица теряют упругость.</string>
    <string name="text_05_b">После 55 лет для эффективной борьбы с возрастными изменениями кожи, такими как потеря четкости контуров, глубокие морщины, недостаток упругости и плотности требует специальный уход.</string>
    <string name="header_06">Гарньер Антивозрастной Уход Сияние Молодости 25+</string>
    <string name="title_act_06">Специальный комплекс:</string>
    <string name="act_01_06">Растительные клетки молодости</string>
    <string name="act_02_06">Кофеин</string>
    <string name="text_06_a">• Комплексное антивозрастное действие: стимулирует клеточное обновление, разглаживает первые морщинки и увлажняет кожу лица.</string>
    <string name="text_06_b">• Придает коже сияние и выравнивает тон.</string>
    <string name="footer_06">Ваша кожа сохраняет молодость и сияние!</string>

    <string name="header_07">Гарньер Антивозрастной Уход Защита от морщин 35+</string>
    <string name="title_act_07">Специальный комплекс:</string>
    <string name="act_01_07">Растительные клетки молодости</string>
    <string name="act_02_07">Полифенолы чая</string>
    <string name="text_07_a">• Комплексное антивозрастное действие: стимулирует клеточное обновление, интенсивно увлажняет и разглаживает кожу лица.</string>
    <string name="text_07_b">• Заметное сокращение морщин</string>
    <string name="footer_07">Ваша кожа насыщается питательными элементами, становится гладкой и приобретает здоровый вид!</string>

    <string name="header_08">Гарньер Антивозрастной Уход Активный Лифтинг 45+</string>
    <string name="title_act_08">Специальный комплекс:</string>
    <string name="act_01_08">Растительные клетки молодости</string>
    <string name="act_02_08">Масло облепихи</string>
    <string name="text_08_a">• Комплексное антивозрастное действие: способствует обновлению клеток, разглаживает и увлажняет кожу лица</string>
    <string name="text_08_b">• Сокращение морщин и повышение упругости</string>
    <string name="text_08_c">• Укрепление контуров лица.</string>
    <string name="footer_08">Цвет кожи лица улучшается, кожа становится гладкой и подтянутой!</string>
    
</resources>
