<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity01" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/garnier_logo" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background"
        android:src="@drawable/background" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView2"
        android:onClick="onClick25"
        android:text="@string/act_02_06"
        android:textSize="10sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button2"
        android:layout_alignBottom="@+id/Button2"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/Button2"
        android:onClick="onClick25"
        android:text="@string/act_01_06"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:gravity="left"
        android:inputType="textMultiLine"
        android:text="@string/header_06"
        android:textSize="10sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:gravity="left"
        android:inputType="textMultiLine"
        android:text="@string/text_06_a"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/EditText01"
        android:layout_below="@+id/EditText01"
        android:ems="10"
        android:gravity="left"
        android:inputType="textMultiLine"
        android:text="@string/text_06_b"
        android:textSize="10sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditText03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/editText1"
        android:ems="10"
        android:gravity="left"
        android:inputType="textMultiLine"
        android:text="@string/title_act_06"
        android:textSize="10sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_toLeftOf="@+id/imageView2"
        android:src="@drawable/can_02" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView2"
        android:src="@drawable/can_02" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="40dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ImageView01"
        android:src="@drawable/tube_01" />

</RelativeLayout>




